# goit-pythonweb-hw-06

./: README.md  db.py  my_select.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: d3a037efdfbf_description_of_changes.py
models/: groups.py  marks.py  students.py  subjects.py  teachers.py
